contest type and login changes add
