# src/database/models/contest.ts
@@ -3,14 +3,14 @@ const mongoose = require('mongoose')
 const contestSchema: any = new mongoose.Schema({
     classesId: { type: mongoose.Schema.Types.ObjectId, ref: "classes", default: null },
     name: { type: String },
-    subTopicId: { type: mongoose.Schema.Types.ObjectId, ref: "sub-topic", default: null },
+    contestTypeId: { type: mongoose.Schema.Types.ObjectId, ref: "contest-type", default: null },
     startDate: { type: Date },
     endDate: { type: Date },
     totalSpots: { type: Number },
     fees: { type: Number },
     winningAmountPerFee: { type: Number },
     winnerPercentage: { type: Number },
-    ranks: [{ place: { type: String } }],
+    ranks: [{ place: { type: String }, price: { type: Number } }],
     totalQuestions: { type: Number },
     totalTime: { type: String },
     totalMarks: { type: Number },
